# Vampire-Numbers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/vampire_nums/: vampire.hpp
src/: vampire.cpp
